Upload page design added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
         <item>Singapore</item>
         <item>New Zealand</item>
         <item>India</item>
+        <item>...Other</item>
     </string-array>
 </resources>
