--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
         <item>India</item>
         <item>...Other</item>
     </string-array>
+
+    <string-array name="type_of_account">
+        <item>Facility</item>
+        <item>HOD</item>
+        <item>Other</item>
+    </string-array>
 </resources>
