--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,8 @@
     </string-array>
 
     <string-array name="type_of_account">
-        <item>Facility</item>
+        <item>Faculty</item>
         <item>HOD</item>
-        <item>Other</item>
     </string-array>
 
 
