--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,13 @@
         <item>HOD</item>
     </string-array>
 
+    <string-array name="download_type">
+        <item>Publication</item>
+        <item>Patent</item>
+        <item>Project</item>
+        <item>Honor and Award</item>
+        <item>All</item>
+    </string-array>
+
 
 </resources>
