download pdf parching   (incomplete)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
         <item>Publication</item>
         <item>Patent</item>
         <item>Project</item>
-        <item>Honor and Award</item>
+        <item>Honors and Award</item>
         <item>All</item>
     </string-array>
 
