--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="country_prompt">Choose a country</string>
 
-    <string-array name="country_arrays">
+    <string-array name="type_publications">
         <item>Malaysia</item>
         <item>United States</item>
         <item>Indonesia</item>
@@ -30,6 +30,8 @@
         <item>Honors and Award</item>
         <item>All</item>
     </string-array>
+
+
 
 
 </resources>
